# gotchacoins-dashboard

./: .editorconfig  .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  test.txt
accounts/: adapters.py  admin.py  forms.py  helpers.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_user_avatar_url.py  0003_alter_user_avatar.py  0003_useragreement.py  0004_remove_user_avatar_url_user_avatar.py
common/storages/: private.py  public.py
common/templatetags/: math_filters.py
common/utils/: cache.py  storage.py
config/: celery.py  settings.py  storage_backends.py  urls.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/contexts/: overview.py  portfolio.py
dashboard/partial_views/: portfolio.py
dashboard/partials/: overview.py  portfolio.py
dashboard/services/: portfolio.py
docs/source/: conf.py  index.rst
exchanges/: admin.py  constants.py  context_processors.py  models.py  tasks.py
exchanges/clients/: __init__.py  base.py  bithumb.py  upbit.py
exchanges/context/: portfolio.py
exchanges/errors/: codes.py  messages.py  upbit.py
exchanges/services/: portfolio.py
exchanges/tasks/: bithumb.py  upbit.py
exchanges/utils/: price.py
infra/: Dockerfile
infra/gunicorn/: entrypoint.sh
market/: urls.py
node/: app.css  daisyui.css  package-lock.json  package.json  tailwind.css
pages/: urls.py  views.py
scripts/: delete_migrations.py  generate_django_secret_key.py
templates/: 404.html  500.html  _base.html
(+47 files in other folders)
