[project]
name = "bitberet-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "django-allauth[socialaccount]>=65.6.0",
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=3.2.3",
    "environs>=14.1.1",
    "werkzeug>=3.1.3",
]
