[project]
name = "gotchacoins-dashboard"
version = "0.1.0"
description = "Got your coins? We do."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.28",
    "django>=5.1.7",
    "django-allauth[socialaccount]>=65.6.0",
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=3.2.3",
    "django-htmx>=1.23.0",
    "django-storages>=1.14.6",
    "django-widget-tweaks>=1.5.0",
    "environs>=14.1.1",
    "httpx>=0.28.1",
    "pillow>=11.1.0",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
]
